chore: Code cleanup and minor improvements
Various code quality improvements, cleanup, and minor fixes.

- Fix package.json dev script to use correct bun --watch syntax
- Remove unnecessary comments from source files
- Add showSearch prop to Footer in MultiRepositoryMergeStatusDisplay
- Clean up imports and formatting
- Update tsconfig with stricter type checking

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "build": "tsdown",
     "start": "bun run ./src/index.tsx",
-    "dev": "bun run ./src/index.tsx --watch",
+    "dev": "bun --watch ./src/index.tsx",
     "test": "CI=true vitest run",
     "test:watch": "CI=true vitest --watch",
     "typecheck": "tsgo --noEmit",
