--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "types": [
-      "vitest/globals"
+      "vitest/globals",
+      "@types/bun"
     ]
   },
   "include": [
