--- a/package.json
+++ b/package.json
@@ -77,8 +77,11 @@
     "@inkjs/ui": "^2.0.0",
     "@napi-rs/keyring": "^1.2.0",
     "commander": "^14.0.0",
+    "conf": "^15.0.2",
     "es-toolkit": "^1.39.7",
     "ink": "^6.0.1",
+    "ink-select-input": "^6.2.0",
+    "ink-text-input": "^6.0.0",
     "react": "^19.1.0",
     "ts-pattern": "^5.7.1",
     "zod": "^4.0.5"
